--- a/leetcode/笔记.md
+++ b/leetcode/笔记.md
@@ -8,3 +8,17 @@ java奇数判断
 
         }
 ```
+
+在力扣中, 判断单个字符的字符串相等貌似不能够使用 `=`
+第一种会执行错误, 第二种正常
+```java
+if (operations[i] == "C") {
+        result[index--] = 0;
+        }
+        
+        
+        
+if (operations[i].contains("C")) {
+                result[index--] = 0;
+            }
+```
