--- a/leetcode/笔记.md
+++ b/leetcode/笔记.md
@@ -22,3 +22,9 @@ if (operations[i].contains("C")) {
                 result[index--] = 0;
             }
 ```
+
+stack的弹栈
+```java
+Stack<ListNode> stack = new Stack<>();
+ListNode node = stack.pop(); // peek 不删除当前节点 pop删除当前节点
+```
