--- a/leetcode/笔记.md
+++ b/leetcode/笔记.md
@@ -30,6 +30,17 @@ Stack<ListNode> stack = new Stack<>();
 ListNode node = stack.pop(); // peek 不删除当前节点 pop删除当前节点
 ```
 
-set 转 list
+
+int数组转Integer数组
+```java
+        Integer[] array = Arrays.stream(nums).boxed().sorted().toArray(Integer[]::new);
+        Integer[] array = Arrays.stream(nums).boxed().sorted(Comparator.reverseOrder()).toArray(Integer[]::new);
+```
+
+set 转 list, 可以直接在传参的时候丢一个set进去自动转成list了
+```java
+        Set<Integer> set = new HashSet<>();
+        List<Integer> list = new ArrayList<>(set);
+```
 
 涉及要翻转的题目可以考虑引入栈
