--- a/leetcode/笔记.md
+++ b/leetcode/笔记.md
@@ -95,3 +95,12 @@ Set<Integer> set = Arrays.stream(answer).boxed().collect(Collectors.toSet());
 select name from Customer
 where referee_id != 2 or referee_id is null
 ```
+
+一个关于replace小细节
+```java
+System.out.println("abcda".replace('a', 'z')); // zbcdz
+```
+
+```javascript
+console.log("abcda".replace('a', 'z')) // zbcda
+```
