--- a/leetcode/笔记.md
+++ b/leetcode/笔记.md
@@ -104,3 +104,12 @@ System.out.println("abcda".replace('a', 'z')); // zbcdz
 ```javascript
 console.log("abcda".replace('a', 'z')) // zbcda
 ```
+
+快速初始化二维数组边界值
+```java
+        // 初始化
+        int [][] dp = new int[101][101];
+        Arrays.fill(dp[0], 1); // 设置0行为1
+        Arrays.stream(dp).forEach(row -> row[0] = 1); // 设置0列为1
+
+```
