--- a/leetcode/笔记.md
+++ b/leetcode/笔记.md
@@ -113,3 +113,18 @@ console.log("abcda".replace('a', 'z')) // zbcda
         Arrays.stream(dp).forEach(row -> row[0] = 1); // 设置0列为1
 
 ```
+
+输出一维数组
+```java
+Arrays.toString();
+```
+
+输出二维数组
+采用 Arrays.deepToString
+```java
+        System.out.println(Arrays.deepToString(new Solution().transpose(new int[][]{
+                {1, 2, 3},
+                {4, 5, 6},
+                {7, 8, 9}
+        })));
+```
