--- a/leetcode/笔记.md
+++ b/leetcode/笔记.md
@@ -60,6 +60,16 @@ int[] answer = new int[]{1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096
 Set<Integer> set = Arrays.stream(answer).boxed().collect(Collectors.toSet());
 ```
 
+List to int[]
+```java
+int[] array = path.stream().mapToInt(Integer::intValue).toArray();
+```
+
+List to Integer[]
+```java
+Integer[] array = path.toArray(new Integer[]{});
+```
+
 涉及要翻转的题目可以考虑引入栈
 
 二分法大致模板: 
