--- a/leetcode/笔记.md
+++ b/leetcode/笔记.md
@@ -70,6 +70,17 @@ List to Integer[]
 Integer[] array = path.toArray(new Integer[]{});
 ```
 
+String to char[]
+char[] to String
+```java
+    private String sort(String oldString) {
+        char[] chars = oldString.toCharArray();
+        Arrays.sort(chars);
+        return String.valueOf(chars);
+    }
+
+```
+
 涉及要翻转的题目可以考虑引入栈
 
 二分法大致模板: 
