--- a/leetcode/笔记.md
+++ b/leetcode/笔记.md
@@ -81,6 +81,14 @@ char[] to String
 
 ```
 
+int [] 去重再排序
+先借助set去重, 再接着排序
+```java
+int[] nums = {1, 2, 0, 1};
+nums = Arrays.stream(nums).boxed().collect(Collectors.toSet()).stream().sorted().mapToInt(Integer::intValue).toArray();
+```
+
+
 涉及要翻转的题目可以考虑引入栈
 
 二分法大致模板: 
