--- a/leetcode/剑指Offer/题单地址.md
+++ b/leetcode/剑指Offer/题单地址.md
@@ -6,10 +6,10 @@ https://github.com/yanring/jianzhi-Offer-Leetcode
 ## 本帖记录剑指offer在leetcode主站的原题。
 1. 无
 2. 无
-3. 数组中重复的数字 -> （中文版） https://leetcode-cn.com/problems/shu-zu-zhong-zhong-fu-de-shu-zi-lcof/
-4. 二维数组中的查找 -> https://leetcode.com/problems/search-a-2d-matrix-ii/
-5. 替换空格 -> （中文版） https://leetcode-cn.com/problems/ti-huan-kong-ge-lcof/
-6. 从尾到头打印链表 -> （中文版） https://leetcode-cn.com/problems/cong-wei-dao-tou-da-yin-lian-biao-lcof/
+3. - [x] 数组中重复的数字 -> （中文版） https://leetcode-cn.com/problems/shu-zu-zhong-zhong-fu-de-shu-zi-lcof/
+4. - [x] 二维数组中的查找 -> https://leetcode.com/problems/search-a-2d-matrix-ii/
+5. - [x] 替换空格 -> （中文版） https://leetcode-cn.com/problems/ti-huan-kong-ge-lcof/
+6. - [x] 从尾到头打印链表 -> （中文版） https://leetcode-cn.com/problems/cong-wei-dao-tou-da-yin-lian-biao-lcof/
 7. 重建二叉树 -> https://leetcode.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal/
 8. 暂无
 9. 用两个栈实现队列 -> https://leetcode.com/problems/implement-queue-using-stacks/
