--- a/leetcode/剑指Offer/题单地址.md
+++ b/leetcode/剑指Offer/题单地址.md
@@ -59,7 +59,7 @@ https://github.com/yanring/jianzhi-Offer-Leetcode
 53. √在排序数组中查找数字 -> https://leetcode.com/problems/find-first-and-last-position-of-element-in-sorted-array/submissions/
 54. 二叉搜索树的第K大节点 -> https://leetcode.com/problems/kth-smallest-element-in-a-bst/description/
 55. 二叉树的深度 -> https://leetcode.com/problems/maximum-depth-of-binary-tree/
-56. 数组中数字出现的次数 -> https://leetcode.com/problems/single-number-iii/
+56. - [x] 数组中数字出现的次数 -> https://leetcode.com/problems/single-number-iii/
 57. 和为S的数字 —> https://leetcode.com/problems/two-sum/
 58. 翻转字符串 -> https://leetcode.com/problems/reverse-words-in-a-string/
 59. 队列的最大值 -> https://leetcode.com/problems/sliding-window-maximum/
@@ -67,8 +67,8 @@ https://github.com/yanring/jianzhi-Offer-Leetcode
 61. 扑克牌中的顺子 -> （中文版）https://leetcode-cn.com/problems/bu-ke-pai-zhong-de-shun-zi-lcof/
 62. 圆圈中最后剩下的数字 -> （中文版） https://leetcode-cn.com/problems/yuan-quan-zhong-zui-hou-sheng-xia-de-shu-zi-lcof/
 63. 股票的最大利润 -> https://leetcode.com/problems/best-time-to-buy-and-sell-stock/
-64. 求1+2+…+n -> （中文版） https://leetcode-cn.com/problems/qiu-12n-lcof/
-65. 不用加减乘除做加法 -> （中文版） https://leetcode-cn.com/problems/bu-yong-jia-jian-cheng-chu-zuo-jia-fa-lcof/
+64. - [x] 求1+2+…+n -> （中文版） https://leetcode-cn.com/problems/qiu-12n-lcof/
+65. - [x] 不用加减乘除做加法 -> （中文版） https://leetcode-cn.com/problems/bu-yong-jia-jian-cheng-chu-zuo-jia-fa-lcof/
 66. 构建乘积数组 -> （中文版） https://leetcode-cn.com/problems/gou-jian-cheng-ji-shu-zu-lcof/
 67. 把字符串转换成整数 -> https://leetcode.com/problems/string-to-integer-atoi/
 68. 二叉搜索树的最近公共祖先 -> https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-search-tree/
