--- a/leetcode/笔记.md
+++ b/leetcode/笔记.md
@@ -30,6 +30,14 @@ Stack<ListNode> stack = new Stack<>();
 ListNode node = stack.pop(); // peek 不删除当前节点 pop删除当前节点
 ```
 
+Queue出队
+```java
+Queue<Integer> result = new LinkedList<>();
+while (!result.isEmpty()) {
+    Integer peek = result.poll(); // peek 不删除当前节点, poll删除当前节点
+}
+```
+
 
 int数组转Integer数组
 ```java
