--- a/leetcode/笔记.md
+++ b/leetcode/笔记.md
@@ -186,3 +186,27 @@ mysql 篇
 
 left join是基于左边的表的字段
 左边的数据将会显示全, 如果没有匹配上右表将会显示null
+
+截取函数
+mysql 的索引是从1开始
+1、从左开始截取字符串
+left（str, length）
+说明：left（被截取字段，截取长度） 
+
+2、从右开始截取字符串
+right（str, length）
+说明：right（被截取字段，截取长度） 
+
+3、截取字符串
+substring（str, pos）
+substring（str, pos, length）
+说明：substring（被截取字段，从第几位开始截取）
+substring（被截取字段，从第几位开始截取，截取长度） 
+
+4、按关键字截取字符串
+substring_index（str,delim,count）
+说明：substring_index（被截取字段，分隔符，关键字出现的次数） 
+
+大小写函数
+lower() upper()
+
