--- a/leetcode/笔记.md
+++ b/leetcode/笔记.md
@@ -187,6 +187,58 @@ mysql 篇
 left join是基于左边的表的字段
 左边的数据将会显示全, 如果没有匹配上右表将会显示null
 
+right join也是一样的, 匹配不到的话就展示null
+
+日期加减操作: 
+```sql
+# 日
+SELECT DATE_ADD(recordDate, INTERVAL 1 DAY) as newDate FROM your_table_name;
+
+# 月
+SELECT DATE_ADD(recordDate, INTERVAL 1 MONTH) as newDate FROM your_table_name;
+SELECT recordDate + INTERVAL 1 MONTH as newDate FROM your_table_name;
+
+SELECT DATE_SUB(recordDate, INTERVAL 1 MONTH) as newDate FROM your_table_name;
+SELECT recordDate - INTERVAL 1 MONTH as newDate FROM your_table_name;
+
+# 年
+SELECT DATE_ADD(recordDate, INTERVAL 1 YEAR) as newDate FROM your_table_name;
+
+```
+
+
+join on仅仅只是表与表之间的连接条件, 连接完成之后, 还是可以使用where过滤的
+```sql
+
+# Write your MySQL query statement below
+
+select t1.name, t2.bonus
+from Employee as t1
+         left join (
+    select empId, bonus
+    from Bonus
+    -- where bonus < 1000
+) as t2
+                   on t1.empId = t2.empId
+where t2.bonus < 1000 or t2.bonus is null;
+
+
+```
+
+计算奇数
+
+```sql
+# Write your MySQL query statement below
+
+
+select id, movie, description, rating
+from cinema
+where id % 2 = 1
+and description != 'boring'
+order by rating desc;
+```
+
+
 截取函数
 mysql 的索引是从1开始
 1、从左开始截取字符串
