LeetCode 热题 100, 三数之和

--- a/leetcode/笔记.md
+++ b/leetcode/笔记.md
@@ -89,6 +89,20 @@ char[] to String
 
 ```
 
+int [] 数组排序
+```java
+Arrays.sort(nums);
+```
+
+int[] 转map
+```java
+// 索引值作为key, 实际值作为value
+        // Map<Integer, Integer> map = IntStream.range(0, nums.length).boxed().collect(Collectors.toMap(index -> index, index -> nums[index]));
+
+// 实际值作为key, 实际值作为value, 这可能会吞掉一部分重复的数组值
+        Map<Integer, Integer> map = IntStream.range(0, nums.length).boxed().collect(Collectors.toMap(index -> nums[index], index -> index, (existingValue, newValue) -> newValue));
+```
+
 int [] 去重再排序
 先借助set去重, 再接着排序
 ```java
