LeetCode 热题 100, 三数之和 , 找到字符串中所有字母异位词

--- a/leetcode/笔记.md
+++ b/leetcode/笔记.md
@@ -38,6 +38,23 @@ while (!result.isEmpty()) {
 }
 ```
 
+对字符串String内部的字符进行排序, 最终返回一个String
+```java
+// 方式一
+char[] chars = p.toCharArray();  // 字符串转字符数组
+Arrays.sort(chars);              // 对数组排序
+p = new String(chars);           // 数组转回字符串
+
+// 方式二
+p = p.chars()                     // 转为IntStream（字符的Unicode值）
+    .sorted()                     // 对Unicode值排序
+    .mapToObj(c -> (char) c)      // 将int转为Character
+        .collect(StringBuilder::new,  // 使用StringBuilder收集
+                 StringBuilder::append,
+                 StringBuilder::append)
+    .toString();
+```
+
 
 int数组转Integer数组
 ```java
