LeetCode 热题 100, 旋转图像

--- a/leetcode/笔记.md
+++ b/leetcode/笔记.md
@@ -300,3 +300,17 @@ like %123%
 ```java
 System.out.println(Arrays.deepToString(matrix));
 ```
+
+二维数组深拷贝
+```java
+
+int[][] result = Arrays.stream(matrix)
+    .map(row -> Arrays.copyOf(row, row.length))
+    .toArray(int[][]::new);
+
+```
+
+二维数组浅拷贝
+```java
+Arrays.copyOf(matrix, matrix.length);
+```
